style.css
body {
    font-family: Helvetica, Arial, sans-serif;
    line-height: 1.4;
    background: #000;
    color: #fff;
    margin: 2rem;
}

.site-header, .page-header {
  padding: 1rem 2rem;  
  margin-bottom: 2rem;
  border-radius: 8px;
}

.site-header .container {
  display: flex;
  flex-direction: row;
  gap: 4rem;
  align-items: center;
  justify-content: center;
}

.header-text {
  display: inline-flex;
  flex-wrap: wrap;
  gap: 1rem;
  align-items: center;
}

@media (max-width: 768px) {
  .site-header .container {
    flex-direction: column;
    gap: 2rem;
    align-items: center;
    justify-content: center;
    margin-top: 1rem;
  }
  .page-header .logo {
    height: auto;
    margin-left: auto;
    margin-right: auto;
  }
  .header-text {
    justify-content: center;
  }
}
.site-header .logo {
  width: 160px;
  height: auto;
}

.site-header .header-text {
  line-height: 1.4;
}

.site-header a,
.site-footer a {
  color: #fff;
  text-decoration: underline;
}

.home-titles {
  margin: 0 auto;
  display: block;
  margin-top: 6em;
}
.project-link {
  text-decoration: none;
  color: inherit;
  display: flex;
  flex-direction: column;
  gap: 2rem; ;
}
.site-header a:hover,
.site-footer a:hover {
  text-decoration: none;
}

.project-card {
  border: 1px solid #d0d0d0;
  margin: 2rem 1rem;
  max-width: 1000px;
  margin-left: auto;
  margin-right: auto;
  transition: transform 0.2s ease, box-shadow 0.2s ease;
  border-radius: 6px;
  overflow: hidden;
}

.project-card:hover {
  cursor: pointer;
  box-shadow: 0 4px 12px rgba(255, 255, 255, 0.5);
  transform: translateY(-4px);
}

.project-image {
  object-fit: cover;
  background-color: #ededed;
  border-right: 1px solid #d0d0d0;
  flex: 2;
  aspect-ratio: 16/9;
  width: 100%;
}

.project-text h2 {
  font-weight: 700;
  margin-bottom: 0.5rem;
}

.project-text p {
  line-height: 1.6;
}

.project-text {
  padding: 0rem 2rem 2rem 2rem;
  flex: 1;
}

.project-page-image{
    width: 100%;
    height: auto;
    margin-bottom: 1rem;
    border: 1px solid #d0d0d0;
    background-color: #ededed;
    box-sizing: border-box;
    padding: 1rem;
}

.page-content {
    max-width: 1000px;
    margin: 0 auto;
    padding: 1rem;
}

.page-content p, .page-content h1, .page-content h2, .page-content ul, .page-content h3 {
    max-width: 600px;
    margin-left: auto;
    margin-right: auto;
}

.site-footer {
  padding: 1rem 2rem;  
  margin-top: 4rem;
  border-radius: 8px;
  text-align: center;
}

html {
  scroll-behavior: smooth;
}

form {
  border: 1px solid #d0d0d0;
  padding: 2rem;
  display: flex;
  flex-direction: column;
  max-width: 300px;
  margin: auto;
  gap: 2rem;
}

label {
  display: inline-flex;
}

input, textarea {
  min-height: 42px;
  width: 100%;
}

button {
  min-height: 42px;
  background: #fff;
  color: #000;
  font-size: 18px;
  font-weight: 700;
  border: none;
  margin: auto;
  padding: 8px 24px;
  border-radius: 4px;
  transition: transform 0.2s ease, box-shadow 0.2s ease;
}

button:hover {
  cursor: pointer;
  box-shadow: 0 4px 12px rgba(255, 255, 255, 0.5);
  transform: translateY(-2px);
}

label::after {
  content: '*';
  color: #b32b3c;
}

input:focus, textarea:focus {
  outline: 2px solid #d9949c;
  outline-offset: 1px;
  border-color: #b32b3c;
}

.stat-list {
  list-style: none;
  padding: 0;
  font-family: monospace;
}

.stat-list li {
  display: flex;
  gap: 1rem;
}
.number {
  width: 5ch;
  text-align: right;
  font-weight: bold;
}
.container-404 {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  padding: 2rem;
}
.container-404 button a {
  color: #fff;
  text-decoration: none;
}

.not-found-gif {
  border: 1px solid #d0d0d0;
  border-radius: 300px;
  background: #ededed;
  height: 160px;
}

.swiper {
  width: 100%;
  max-width: 1000px;
  margin: 2rem auto;
  border-radius: 8px;
  overflow: hidden;
  border: 1px solid #d0d0d0;
  aspect-ratio: 16 / 10;
}
.swiper-slide {
  background: #fff;
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: 1.5rem;
  color: #333;
  transition: opacity 0.5s ease-in-out;
}
.swiper-button-next,
.swiper-button-prev {
  color: #000 !important;
}
.swiper-pagination {
  color: #000 !important;
}
.swiper-slide img {
  width: 100%;
  height: 100%;
  object-fit: cover;
}
.swiper-pagination {
  text-align: left !important;
  padding-left: 1rem;
}
.swiper-button-next,
.swiper-button-prev {
  opacity: 0;
  transition: opacity 0.3s ease;
}

.swiper:hover .swiper-button-next,
.swiper:hover .swiper-button-prev {
  opacity: 1;
}
.swiper-slide iframe {
  width: 100%;
  height: 100%;
  border: none;
  display: block;
}
:root {
  --swiper-navigation-size: 24px !important;
}

.tag-container {
  display: flex;
  flex-wrap: wrap;
  gap: 0.5rem;
  margin-top: 1rem;
}

.tag {
  font-family: monospace;
  font-size: 12px;
  padding: 4px 8px;
  border: 1px solid #fff;
  border-radius: 4px;
  color: #fff;
  white-space: nowrap;
}
@media (min-width: 768px) {
  .project-link {
    flex-direction: row;
  }
  .project-text {
    padding: 1rem 1rem 1rem 0rem;
  }
}

